testing/error/wrongreflector.inp
* I BETA B II III AAAA (AQ) (EP)
Hello world